# exmemo

./: .bumpversion.cfg  .gitignore  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  setup.py
contrib/: fix_symlinks.py  renumber_expts.py
docs/: conf.py  index.rst
exmemo/: __init__.py  collectors.py  errors.py  plugins.py  readers.py  utils.py  workspace.py
exmemo/commands/: cli.py  config.py  data.py  debug.py  exmemo.py  expt.py  main.py  note.py  project.py  protocol.py
exmemo/cookiecutter/: __init__.py  cookiecutter.json
exmemo/cookiecutter/hooks/: post_gen_project.py  post_gen_project.sh
exmemo/cookiecutter/{{cookiecutter.project_slug}}/: .gitignore  README.rst
exmemo/cookiecutter/{{cookiecutter.project_slug}}/analysis/: .bumpversion.cfg  .travis.yml  README.rst  setup.py
exmemo/cookiecutter/{{cookiecutter.project_slug}}/notebook/: .gitignore  Makefile  conf.py  ideas_and_feedback.rst  index.rst  unexpected_observations.rst
exmemo/sphinx/: __init__.py  biology.py  datatable.py  doi.py  general.py  notebook.py  tweaks.css
exmemo/sphinx/templates/: datatable.html
tests/: param_helpers.py  test_init.py  test_no_missing_files.py  test_sphinx_doi.py  test_workspace.nt  test_workspace.py
